--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "feed-me",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3000/",
   "dependencies": {
+    "axios": "^0.19.0",
     "bootstrap": "^4.3.1",
-    "puppeteer": "^1.20.0",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-scripts": "3.1.1",
-    "reactstrap": "^8.0.1",
+    "reactstrap": "^8.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
